Ajustar aparência da extensão

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,29 @@ $icon-font-path: '../fonts/';
 // bower:scss
 @import "bower_components/bootstrap-sass/assets/stylesheets/_bootstrap.scss";
 // endbower
+@font-face {
+  font-family: 'Eina-Semibold';
+  src: url('../fonts/Eina01-SemiBold.eot');
+  src: url('../fonts/Eina01-SemiBold.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Eina01-SemiBold.woff2') format('woff2'),
+    url('../fonts/Eina01-SemiBold.woff') format('woff'),
+    url('../fonts/Eina01-SemiBold.ttf') format('truetype'),
+    url('../fonts/Eina01-SemiBold.svg#Eina01-SemiBold') format('svg');
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Eina-Regular';
+  src: url('../fonts/Eina01-Regular.eot');
+  src: url('../fonts/Eina01-Regular.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/Eina01-Regular.woff2') format('woff2'),
+    url('../fonts/Eina01-Regular.woff') format('woff'),
+    url('../fonts/Eina01-Regular.ttf') format('truetype'),
+    url('../fonts/Eina01-Regular.svg#Eina01-Regular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 .browserupgrade {
   margin: 0.2em 0;
@@ -14,79 +37,38 @@ $icon-font-path: '../fonts/';
 body {
   padding-top: 20px;
   padding-bottom: 20px;
+  font-family: 'Eina-Regular';
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-right: 15px;
-  padding-left: 15px;
+
+.container {
+  max-width: 400px;
 }
 
-/* Custom page header */
-.header {
-  padding-bottom: 20px;
-  border-bottom: 1px solid #e5e5e5;
-}
-
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-}
-
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
-}
-
-/* Customize container */
-@media (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-}
-.container-narrow > hr {
+.container-narrow>hr {
   margin: 30px 0;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
+.box-conteudo {
   text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  padding: 14px 24px;
-  font-size: 21px;
-}
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
+  .img-dollar {
+    width: 100px;
+    margin: 20px auto;
+  }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-right: 0;
-    padding-left: 0;
+  p {
+    margin: 0;
+    color: #ff3859;
+    font-family: 'Eina-Semibold';
+    font-size: 25px;
   }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
+
+  h5 {
+    font-weight: bold;
   }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
+
+  .loading {
+    display: none;
   }
 }
